bk_ida/gccida/c1/cselib_lookup_mem
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_lookup_mem/src/cselib.c:1213:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v4; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_lookup_mem/src/cselib.c:1229:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v5 = mode_class_0[( unsigned __int8)v3]; 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_lookup_mem/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_lookup_mem/src/cselib.c:1251:7: error: use of undeclared identifier 'hash_table_0'; did you mean 'hash_table'?
v10 = hash_table_0; 
      ^~~~~~~~~~~~
      hash_table
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_lookup_mem/src/cselib.c:82:15: note: 'hash_table' declared here
static htab_t hash_table;
              ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_lookup_mem/src/obj/cselib.o] Error 1
